--- a/index.html
+++ b/index.html
@@ -39,7 +39,14 @@
 		</div>
 	</div>
   <div class="user-stat">
+    <div class="stat-top">
+    <div class="row-img">
+      <img src="pic1.jpg" alt="pic" class="stat-img">
+      <img src="pic2.jpg" alt="pic" class="stat-img">
+      <img src="pic3.jpg" alt="pic" class="stat-img">
+    </div>
    <p class="stat">3.58M</p>
+  </div>
     <p class="stat-text">Total active Users from the world</p>
   </div>
  <div class="features">
