--- a/index.html
+++ b/index.html
@@ -37,6 +37,17 @@
               <a href="#" class="button hero-button-capsule btn2">Download App</a>
             </div>          
 		</div>
+    <div class="creditCard">
+      <div class="rectangle1">
+      </div>
+      <div class="rectangle2">
+      </div>
+      <div class="rectangle3">
+      </div>
+      <div class="rectangle4"></div>
+    </div>
+    <div class="rectangle5"></div>
+    <div class="rectangle6"></div>
 	</div>
   <div class="user-stat">
     <div class="stat-top">
